--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "parse-server-generator",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Generate Parse Server apps easily in the command line",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "parse-server-generator": "./bin/parse-server-generator"
   },
   "keywords": [
     "parse-server",
@@ -15,8 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^1.1.2",
-    "mkdirp": "^0.5.1",
-    "child-process-promise": "^2.1.3"
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {},
   "repository": {
